@@ -27,7 +27,9 @@
 
 #include "sp-guide.h"
 
-#define KNOT_EVENT_MASK (GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | GDK_POINTER_MOTION_MASK | GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK)
+#define KNOT_EVENT_MASK (GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK | \
+			 GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | \
+			 GDK_KEY_PRESS_MASK | GDK_KEY_RELEASE_MASK)
 
 #define hypot(a,b) sqrt ((a) * (a) + (b) * (b))
 
